syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.tnmk.practice.authentication.authenticationserviceproto.proto";

service AuthenticationGrpcService {
    rpc authenticate(AuthenticationRequestProto) returns (AuthenticationResponseProto);
}
message AuthenticationRequestProto {
    string username = 1;
    string password = 2;
}
message AuthenticationResponseProto {
    string jwt = 1;
}